--- a/Referenzcode/ADMM/Robustness-Aware-Pruning-ADMM/ADMM_examples/cifar10/run.sh.example
+++ b/Referenzcode/ADMM/Robustness-Aware-Pruning-ADMM/ADMM_examples/cifar10/run.sh.example
@@ -5,6 +5,6 @@ python -u main.py --config_file config.yaml.example --stage pretrain
 #python -u main.py --config_file config.yaml --stage retrain
 
 #admm compression in adversarial setting
-#python -u adv_main.py --config_file config.yaml.example --stage pretrain
+#python -u new_adv_main.py --config_file config.yaml.example --stage pretrain
 #python -u adv_main.py --config_file config.yaml --stage admm
 #python -u adv_main.py --config_file config.yaml --stage retrain
