--- a/selfCoded/evaluationFramework/configs/DataHandlerConfig.json
+++ b/selfCoded/evaluationFramework/configs/DataHandlerConfig.json
@@ -19,5 +19,15 @@
         ]
       }
     }
+  },
+  "dataset": {
+    "datasetName": "cifar100",
+    "storageType": "default",
+    "root": "/Users/dominik/Documents/jupyter/Neuronale Netze programmieren Buch/AI in PyTorch/dataset/cifar-100/",
+    "query": ["Volumes","PortableSSD", "Projekte", "datasets", "celeba_dataset", "IMG", "img_align_celeba"],
+    "download": true,
+    "train": false,
+    "transform": true,
+    "target_transform": null
   }
 }
