implemented hard coded trainer, made changes to configurator and datahandler etc. maybe own trainerconfig and for datataloader settings inside

--- a/selfCoded/evaluationFramework/configs/DataHandlerConfig.json
+++ b/selfCoded/evaluationFramework/configs/DataHandlerConfig.json
@@ -29,5 +29,12 @@
     "train": false,
     "transform": true,
     "target_transform": null
+  },
+  "trainer": {
+    "optimizer": "Adam",
+    "loss": "BinaryCrossEntropyLoss",
+    "epoch":  2,
+    "lr": 0.1,
+    "weight_decay": 1e-4
   }
 }
