implemented another loss function and threw one hot encoding out, num_workers atm deleted until i know better

--- a/selfCoded/evaluationFramework/configs/DataHandlerConfig.json
+++ b/selfCoded/evaluationFramework/configs/DataHandlerConfig.json
@@ -32,7 +32,7 @@
   },
   "trainer": {
     "optimizer": "Adam",
-    "loss": "BinaryCrossEntropyLoss",
+    "loss": "CrossEntropyLoss",
     "epoch":  2,
     "lr": 0.1,
     "weight_decay": 1e-4
