--- a/selfCoded/evaluationFramework/configs/preOptimizingTuning/ADMMConfig.json
+++ b/selfCoded/evaluationFramework/configs/preOptimizingTuning/ADMMConfig.json
@@ -1,11 +1,7 @@
 {
   "trainer": {
-    "optimizer": "Adam",
-    "loss": "CrossEntropyLoss",
-    "epoch":  2,
-    "lr": 0.1,
-    "weight_decay": 1e-4,
-    "pre_optimization_tuning_path": true
+    "main_iterations": 160000,
+    "admm_iterations": 8000
   },
   "dataloader": {
     "batch_size": 16,
