new analyzer method first steps

--- a/selfCoded/evaluationFramework/configs/preOptimizingTuning/ADMMConfig.json
+++ b/selfCoded/evaluationFramework/configs/preOptimizingTuning/ADMMConfig.json
@@ -3,7 +3,7 @@
     "main_iterations": 160000,
     "admm_iterations": 8000,
     "rho": 1e-4,
-    "gradient_threshold": null,
+    "gradient_threshold": 36,
     "batch_size": 64,
     "regularization_l2_norm_enabled": true,
     "regularization_l_norm_decay": 1e-5
