--- a/selfCoded/evaluationFramework/configs/TrainerConfig.json
+++ b/selfCoded/evaluationFramework/configs/TrainerConfig.json
@@ -3,7 +3,8 @@
     "optimizer": "Adam",
     "loss": "CrossEntropyLoss",
     "epoch":  10,
-    "lr": 0.0001,
+    "lr": 0.001,
+    "momentum": 0.9,
     "pre_optimization_tuning_path": true
   },
   "dataloader": {
