--- a/selfCoded/evaluationFramework/configs/TrainerConfig.json
+++ b/selfCoded/evaluationFramework/configs/TrainerConfig.json
@@ -2,13 +2,13 @@
   "trainer": {
     "optimizer": "Adam",
     "loss": "CrossEntropyLoss",
-    "epoch":  10,
+    "epoch":  1000000,
     "lr": 0.001,
     "momentum": 0.9,
     "pre_optimization_tuning_path": true
   },
   "dataloader": {
-    "batch_size": 64,
+    "batch_size": 32,
     "shuffle": true,
     "num_workers": 1
   },
