--- a/selfCoded/evaluationFramework/configs/TrainerConfig.json
+++ b/selfCoded/evaluationFramework/configs/TrainerConfig.json
@@ -2,7 +2,7 @@
   "trainer": {
     "optimizer": "Adam",
     "loss": "CrossEntropyLoss",
-    "epoch":  1000000,
+    "epoch":  25,
     "lr": 0.001,
     "momentum": 0.9,
     "pre_optimization_tuning_path": true
