tested some python scripts, prototype of Pattern Pruning Algo, added termination criterion

--- a/selfCoded/evaluationFramework/configs/preOptimizingTuning/ADMMConfig.json
+++ b/selfCoded/evaluationFramework/configs/preOptimizingTuning/ADMMConfig.json
@@ -9,7 +9,9 @@
     "gradient_threshold": 6,
     "batch_size": 32,
     "regularization_l2_norm_enabled": true,
-    "regularization_l_norm_decay": 5e-6
+    "regularization_l_norm_decay": 5e-6,
+    "epsilon_W": 1,
+    "epsilon_Z": 1
   },
   "dataloader": {
     "batch_size": 32,
