--- a/selfCoded/evaluationFramework/configs/ConfigRegistry.json
+++ b/selfCoded/evaluationFramework/configs/ConfigRegistry.json
@@ -1,4 +1,7 @@
 {
   "admm_settings": "configs/preOptimizingTuning/ADMMConfig.json",
-  "admm_model_architecture": "configs/preOptimizingTuning/ADMMModelArchitecture.json"
+  "admm_model_architecture": "configs/preOptimizingTuning/ADMMModelArchitecture.json",
+  "adversarial_threat_model": "configs/adversarial_configs/ThreatModelConfig.json",
+  "adversarial_provider": "configs/adversarial_configs/ProviderConfig.json",
+  "adversarial_attacks": "configs/adversarial_configs/AttacksConfig.json"
 }
