added saving of adv samples and original samples in folder structure for later evaluation. Able to create Dataloaders based on the generated adversarial and original samples.

--- a/selfCoded/evaluationFramework/configs/TrainerConfig.json
+++ b/selfCoded/evaluationFramework/configs/TrainerConfig.json
@@ -13,7 +13,7 @@
     "num_workers": 1
   },
   "snapshot": {
-    "name": "LeNet_epsiolon_test",
+    "name": "LeNet_epsilon_test",
     "snapshot_enabled": false,
     "snapshot_model_path": "models/LeNet/",
     "snapshot_model_path_raw": "models/LeNet/",
