--- a/selfCoded/evaluationFramework/requirements/environment.yml
+++ b/selfCoded/evaluationFramework/requirements/environment.yml
@@ -191,10 +191,15 @@ dependencies:
   - zlib=1.2.13=h5a0b063_0
   - zstd=1.5.5=hd90d995_0
   - pip:
+      - braceexpand==0.1.7
+      - chardet==4.0.0
       - faiss-cpu==1.7.4
       - filelock==3.13.1
+      - fpdf==1.7.2
       - fsspec==2024.2.0
       - idna==2.10
+      - imageio==2.34.0
+      - lorem==0.1.1
       - memory-profiler==0.61.0
       - mpmath==1.2.1
       - networkx==3.2.1
@@ -203,12 +208,18 @@ dependencies:
       - opencv-python==4.9.0.80
       - pathlib2==2.3.7.post1
       - protobuf==5.26.0
+      - reportlab==4.2.0
+      - requests==2.25.1
       - robustml==0.0.3
+      - seaborn==0.13.2
       - setuptools==66.1.1
       - sympy==1.12
       - torch==2.4.0.dev20240322
+      - torchattacks==3.5.1
       - torchaudio==2.2.0.dev20240322
       - torchcam==0.4.0
       - torchvision==0.19.0.dev20240322
       - typing-extensions==4.8.0
+      - urllib3==1.26.18
+      - webdataset==0.2.86
 prefix: /Users/dominik/anaconda3/envs/NeuronalNetwork
