--- a/selfCoded/evaluationFramework/requirements/requirements.txt
+++ b/selfCoded/evaluationFramework/requirements/requirements.txt
@@ -1,7 +1,12 @@
+braceexpand==0.1.7
+chardet==4.0.0
 faiss-cpu==1.7.4
 fonttools==4.25.0
+fpdf==1.7.2
 fsspec==2024.2.0
 idna==2.10
+imageio==2.34.0
+lorem==0.1.1
 mpmath==1.2.1
 munkres==1.1.4
 networkx==3.2.1
@@ -11,10 +16,16 @@ opencv-python==4.9.0.80
 pathlib2==2.3.7.post1
 patsy==0.5.3
 protobuf==5.26.0
+reportlab==4.2.0
+requests==2.25.1
+seaborn==0.13.2
 sympy==1.12
 torch==2.4.0.dev20240322
+torchattacks==3.5.1
 torchaudio==2.2.0.dev20240322
 torchcam==0.4.0
 torchvision==0.19.0.dev20240322
 typing_extensions==4.8.0
+urllib3==1.26.18
+webdataset==0.2.86
 webencodings==0.5.1
