--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 dataset/
 backup/
 Referenzcode/ADMM/Robustness-Aware-Pruning-ADMM/ADMM_examples/cifar10/data/
+Referenzcode/
 selfCoded/evaluationFramework/experiment/
 selfCoded/evaluationFramework/models/LeNet/
+selfCoded/evaluationFramework/models/AlexNet/
+selfCoded/evaluationFramework/testImages/
