--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 dataset/
 backup/
 Referenzcode/ADMM/Robustness-Aware-Pruning-ADMM/ADMM_examples/cifar10/data/
-Referenzcode/
+Referenzcode/1xN/experiments/
 selfCoded/evaluationFramework/experiment/
 selfCoded/evaluationFramework/models/LeNet/
 selfCoded/evaluationFramework/models/AlexNet/
