--- a/selfCoded/evaluationFramework/configBackup/configs/DataHandlerConfig.json
+++ b/selfCoded/evaluationFramework/configBackup/configs/DataHandlerConfig.json
@@ -17,8 +17,11 @@
     "storageType": "default",
     "root": "/Users/dominik/Documents/jupyter/Neuronale Netze programmieren Buch/AI in PyTorch/dataset/mnist/",
     "query": ["Volumes","PortableSSD", "Projekte", "datasets", "celeba_dataset", "IMG", "img_align_celeba"],
+    "train": true,
     "download": true,
     "transform": true,
-    "target_transform": null
+    "target_transform": null,
+    "split_ratio": [0.7, 0.3],
+    "seed": 42
   }
 }
