--- a/selfCoded/evaluationFramework/configBackup/configs_alexnet/DataHandlerConfig.json
+++ b/selfCoded/evaluationFramework/configBackup/configs_alexnet/DataHandlerConfig.json
@@ -13,12 +13,15 @@
     }
   },
   "dataset": {
-    "datasetName": "custom",
-    "storageType": "tar",
-    "root": "/Volumes/PortableSSD/Projekte/datasets/imagenet/imagenet1k/",
+    "datasetName": "imagenet",
+    "storageType": "default",
+    "root": "/Volumes/Extreme SSD/datasets/imagenet/imagenet1k/train/",
     "query": ["Volumes","PortableSSD", "Projekte", "datasets", "celeba_dataset", "IMG", "img_align_celeba"],
-    "download": false,
+    "train": true,
+    "download": true,
     "transform": true,
-    "target_transform": null
+    "target_transform": null,
+    "split_ratio": [0.7, 0.3],
+    "seed": 42
   }
 }
