--- a/selfCoded/evaluationFramework/configBackup/configs_alexnet/preOptimizingTuning/ADMMConfig.json
+++ b/selfCoded/evaluationFramework/configBackup/configs_alexnet/preOptimizingTuning/ADMMConfig.json
@@ -1,8 +1,8 @@
 {
   "admm_trainer": {
     "phase_list": ["admm","retrain"],
-    "main_iterations": 600,
-    "admm_iterations": 200,
+    "main_iterations": 100,
+    "admm_iterations": 20,
     "dynamic_masking": true,
     "rho": 5e-4,
     "gradient_threshold": 1,
@@ -14,7 +14,7 @@
     "threshold_warmup": 0.1
   },
   "save": true,
-  "save_path": "experiment/LeNet/v7 elog vs all/clipGradientsTest/clip_grad_1/test",
+  "save_path": "experiment/Alexnet/v1/SettingsLeNet",
   "onnx_enabled": false,
   "tensor_buffering_enabled": false
 }
