big changes, cuda enabled, feature map extraction, scoreCAM, code optimization etc.

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ selfCoded/evaluationFramework/experiment/
 selfCoded/evaluationFramework/models/LeNet/
 selfCoded/evaluationFramework/models/AlexNet/
 selfCoded/evaluationFramework/testImages/
+__pycache__
 
 .DS_Store
