--- a/selfCoded/evaluationFramework/configs/DataHandlerConfig.json
+++ b/selfCoded/evaluationFramework/configs/DataHandlerConfig.json
@@ -1,27 +1,21 @@
 {
   "transform": {
-    "transformParam": {
-      "dtype": "float",
-      "normalize": {
-        "mean": [
-          0.1307
-        ],
-        "std": [
-          0.3081
-        ]
-      }
-    }
+      "dataset": "imagenet"
   },
   "dataset": {
     "datasetName": "imagenet",
     "storageType": "default",
-    "root": "/Volumes/Extreme SSD/datasets/imagenet/imagenet1k/train/",
+    "root": "F:\\datasets\\imagenet\\imagenet1k\\train",
     "query": ["Volumes","PortableSSD", "Projekte", "datasets", "celeba_dataset", "IMG", "img_align_celeba"],
     "train": true,
     "download": true,
     "transform": true,
     "target_transform": null,
-    "split_ratio": [0.9, 0.1],
-    "seed": 42
+    "split_ratio": [1000, 100],
+    "seed": 42,
+    "cuda_enabled": true
+  },
+  "settings": {
+    "cuda": true
   }
 }
