--- a/selfCoded/evaluationFramework/configBackup/configs_macbook_9_06/configs/examples/lenet/DataHandlerConfig.json
+++ b/selfCoded/evaluationFramework/configBackup/configs_macbook_9_06/configs/examples/lenet/DataHandlerConfig.json
@@ -1,21 +1,24 @@
 {
   "transform": {
-      "dataset": "mnist"
+    "transformParam": {
+      "dtype": "float",
+      "normalize": {
+        "mean": [
+          0.1307
+        ],
+        "std": [
+          0.3081
+        ]
+      }
+    }
   },
   "dataset": {
     "datasetName": "mnist",
     "storageType": "default",
     "root": "/Users/dominik/Documents/jupyter/Neuronale Netze programmieren Buch/AI in PyTorch/dataset/mnist/",
     "query": ["Volumes","PortableSSD", "Projekte", "datasets", "celeba_dataset", "IMG", "img_align_celeba"],
-    "train": true,
-    "download": false,
+    "download": true,
     "transform": true,
-    "target_transform": null,
-    "split_ratio": [1000, 100],
-    "seed": 42,
-    "cuda_enabled": false
-  },
-  "settings": {
-    "cuda": false
+    "target_transform": null
   }
 }
