--- a/selfCoded/evaluationFramework/configs/TrainerConfig.json
+++ b/selfCoded/evaluationFramework/configs/TrainerConfig.json
@@ -3,9 +3,12 @@
     "optimizer": "Adam",
     "loss": "CrossEntropyLoss",
     "epoch":  10,
-    "lr": 0.00001,
+    "lr": 0.1,
     "momentum": 0.9,
-    "pre_optimization_tuning_path": true
+    "pre_optimization_tuning_path": true,
+    "lr_scheduler": true,
+    "lr_step_size": 1,
+    "lr_gamma": 0.1
   },
   "dataloader": {
     "batch_size": 64,
@@ -13,10 +16,10 @@
     "num_workers": 6
   },
   "snapshot": {
-    "name": "LeNet_all_pat_clipGrad_1_0",
+    "name": "ResNet18_train_admm_retrain",
     "snapshot_enabled": false,
-    "snapshot_model_path": "models/LeNet/",
-    "snapshot_model_path_raw": "models/LeNet/",
+    "snapshot_model_path": "experiment\\LeNet\\windows\\train_admm_retrain\\second",
+    "snapshot_model_path_raw": "experiment\\LeNet\\windows\\train_admm_retrain\\second",
     "recovery_epoch": 3
   }
 }
