--- a/selfCoded/evaluationFramework/configs/TrainerConfig.json
+++ b/selfCoded/evaluationFramework/configs/TrainerConfig.json
@@ -3,10 +3,10 @@
     "optimizer": "Adam",
     "loss": "CrossEntropyLoss",
     "epoch":  15,
-    "lr": 0.1,
+    "lr": 0.0001,
     "momentum": 0.9,
     "pre_optimization_tuning_path": true,
-    "lr_scheduler": true,
+    "lr_scheduler": false,
     "lr_step_size": 5,
     "lr_gamma": 0.1
   },
