--- a/selfCoded/evaluationFramework/configs/analyzer/AnalyzerConfig.json
+++ b/selfCoded/evaluationFramework/configs/analyzer/AnalyzerConfig.json
@@ -1,7 +1,7 @@
 {
   "testrun": "clip_grad_1",
   "save": true,
-  "save_path": "experiment\\LeNet\\cic\\ResNet\\adv_retraining_v1",
+  "save_path": "experiment\\LeNet\\cic\\ResNet\\unstruct_default_double_v2_cic",
   "name": "ResNet",
   "copy_config": true,
   "config_path": "configs",
@@ -11,23 +11,28 @@
     "adv_attack_selection": 0,
     "adv_attack_selection_range": 3,
     "adv_sample_range_start": 0,
-    "adv_sample_range_end": 10,
+    "adv_sample_range_end": 200,
     "adv_only_success_flag": true,
     "adv_shuffle": true
   },
   "analysis_methods": {
     "epsilon_distance": {
-      "enabled": false
+      "enabled": true
     },
     "pruning": {
-      "enabled": false
+      "enabled": true
     },
     "accuracy_testset": {
       "enabled": true,
       "titel": "testset"
     },
+    "cic_test": {
+      "enabled": true,
+      "num_samples": 1,
+      "batch_size": 16
+    },
     "noisy_accuracy": {
-      "enabled": false,
+      "enabled": true,
       "titel": "NoisyAccuracy",
       "noise_ratio": 0.2,
       "noise_steps": 4
@@ -46,16 +51,16 @@
       "shuffle": false
     },
     "grad_and_original": {
-      "enabled": false,
+      "enabled": true,
       "adv_dataset_path": null,
-      "grad_start_index": 0,
+      "grad_start_index": 799,
       "grad_range": 10
     },
     "scoreCAM_and_original": {
-      "enabled": false,
+      "enabled": true,
       "adv_dataset_path": null,
       "score_start_index": 0,
-      "score_range": 10
+      "score_range": 1
     },
     "grad": {
       "enabled": false,
@@ -79,15 +84,15 @@
       "target_layer": "model.layer4.1.conv2"
     },
     "feature_maps_all_layer": {
-      "enabled": false,
+      "enabled": true,
       "adv_dataset_path": null,
-      "feature_start_index": 0,
+      "feature_start_index": 799,
       "feature_range": 10
     },
     "saliency_and_original": {
-      "enabled": false,
+      "enabled": true,
       "adv_dataset_path": null,
-      "saliency_start_index": 0,
+      "saliency_start_index": 799,
       "saliency_range": 10
     },
     "saliency": {
@@ -99,9 +104,9 @@
     "topk_accuracy": {
       "enabled": false,
       "adv_dataset_path": null,
-      "topk_start_index": 0,
-      "topk_range": 5,
-      "topk_pred": 1
+      "topk_start_index": 799,
+      "topk_range": 40,
+      "topk_pred": 3
     }
   },
   "changing_parameters": {
