--- a/selfCoded/evaluationFramework/configs/preOptimizingTuning/ADMMConfig.json
+++ b/selfCoded/evaluationFramework/configs/preOptimizingTuning/ADMMConfig.json
@@ -4,21 +4,23 @@
       "admm",
       "retrain"
     ],
-    "main_iterations": 80,
-    "admm_iterations": 20,
+    "main_iterations": 170000,
+    "admm_iterations": 2500,
     "dynamic_masking": true,
     "rho": 0.0005,
-    "gradient_threshold": 1,
-    "batch_size": 32,
+    "gradient_threshold": 24,
+    "batch_size": 64,
     "regularization_l2_norm_enabled": true,
     "regularization_l_norm_decay": 5e-06,
-    "epsilon_W": 0.3,
-    "epsilon_Z": 0.3,
+    "epsilon_W": 1.5,
+    "epsilon_Z": 1.5,
     "threshold_warmup": 0.05,
-    "unstructured_magnitude_pruning_enabled": false,
+    "unstructured_magnitude_pruning_enabled": true,
     "pattern_pruning_all_patterns_enabled": false,
-    "pattern_pruning_elog_patterns_enabled": true,
-    "connectivity_pruning_enabled": false
+    "pattern_pruning_elog_patterns_enabled": false,
+    "connectivity_pruning_enabled": false,
+    "load_pruning_mask": false,
+    "pruning_mask_path": "experiment\\LeNet\\cic\\ResNet\\elog_adv_double_v2_cic\\admm_checkpoints_mask.csv"
   },
   "save": true,
   "save_path": "experiment\\LeNet\\windows\\train_admm_retrain\\first",
